# Worldsong

./: ..gitignore.kate-swp  .atom-build.json  .gitignore  .kateproject  LICENSE  README.md  clean.sh  clean_worldsong.sh  compile.sh  compile_worldsong.sh  devlog.txt  orchestrator  run_kernel.sh  run_worldsong.sh  todo.txt
common/: Cargo.toml  common.rs  compile.sh  data.rs  fs.rs  hierarchy.rs  internal.rs  macros.rs  settings.rs  state.rs  system.rs
common/src/: common.rs  compile.sh  data.rs  macros.rs
databases/: README.md
databases/binaries/: README.md
databases/definitions/: .directory  README.md
databases/definitions/Placeholder/: compile.sh  db.rs
dataset/: Cargo.toml
dataset/src/: compile.sh  db.rs
definition/: compile.sh  main.rs  run.sh
environment/: Cargo.toml  environment.rs  hierarchy.rs  internal.rs
kernel/: Cargo.toml  compile.sh  kernel.rs
kernel/src/: compile.sh  kernel.rs
macros/data/: Cargo.toml  data_macro.rs
macros/schedule/: Cargo.toml  schedule_macro.rs
orchestrator/src/: compile.sh  main.rs
processes/: update.melody
processes/graphics/: compile.config  graphics.rs  graphics_process.rs
processes/graphics/src/: compile.sh  graphics.rs
processes/input/: input.rs  input_process.rs
processes/pausable/: melody
processes/pausable/binaries/: PlaceholderVerse
processes/pausable/definitions/: .lib.rs.swp
processes/srcs/Placeholder/: compile.sh  process.rs
processes/test/: test_process.rs
projects/colors/dependencies/: Cargo.toml
projects/demo/dependencies/: Cargo.toml
projects/demo/src/: compile.config
projects/triangle/dependencies/: Cargo.toml
routines/: README.md  always.melody
routines/binaries/: README.md
routines/definitions/: README.md
routines/definitions/Placeholder/: compile.sh  routine.rs
scheduler/: Dependencies.toml  macros.rs  scheduler.rs
schedules/fixed_update/: fixed_update.rs  schedule_macro.rs
schedules/fixed_update/schedule/: fixed_update.rs  fixed_update_schedule.rs
schedules/variable_update/: schedule_macro.rs  variable_update.rs
schedules/variable_update/schedule/: variable_update.rs
setup/: Cargo.toml  clean.rs  setup_linux.sh
setup/compile_tools/: Cargo.toml
setup/compile_tools/src/: compile_tools.rs
setup/compile_utensils/: Cargo.toml
setup/compile_utensils/src/: compile_utensils.rs
setup/gnu/: setup.sh
setup/src/: worldsong_setup.rs
shared/dll/: Cargo.toml
shared/dll/src/: dll.rs
shared/schedule_macro/: Cargo.toml
shared/schedule_macro/src/: schedule_macro.rs
shared/worldsong_config/: Cargo.toml
shared/worldsong_config/src/: worldsong_config.rs
shared/worldsong_hierarchy/: Cargo.toml
shared/worldsong_hierarchy/src/: worldsong_hierarchy.rs
state/: Cargo.toml  out.txt  state.rs
state/core/: core.rs
state/graphics/: graphics.rs
state/simulation/: simulation.rs
structs/: add
structs/graphics/: Cargo.toml  Dependencies.toml  graphics_state.rs
structs/kernel/: Cargo.toml  kernel_state.rs
structs/simulation/: Cargo.toml  Dependencies.toml  simulation_state.rs
tools/add_process/: Cargo.toml  add_process.rs
tools/add_state_struct/: Cargo.toml  add_state_struct.rs
tools/builders/add_process/: Cargo.toml  add_process.rs
tools/builders/add_state_struct/: Cargo.toml  add_state_struct.rs
tools/builders/compile_kernel/: Cargo.toml  compile_kernel.rs
tools/builders/compile_process/: Cargo.toml  compile_process.rs
tools/builders/compile_schedule/: Cargo.toml  compile_schedule.rs
tools/builders/compile_scheduler/: Cargo.toml  compile_scheduler.rs
tools/builders/compile_state_library/: Cargo.toml  compile_state_library.rs
tools/builders/compile_state_struct/: Cargo.toml  compile_state_struct.rs
tools/builders/compile_tools/: Cargo.toml  compile_tools.rs
tools/builders/generate_state_library/: Cargo.toml  generate_cargo_toml.rs  generate_source.rs  generate_state_library.rs
tools/builders/generate_state_library_old/: Cargo.toml  generate_state_library.rs
tools/builders/run_kernel/: Cargo.toml
tools/compile_kernel/: Cargo.toml  compile_kernel.rs
tools/compile_macro/: Cargo.toml  compile_macro.rs
tools/compile_process/: Cargo.toml  compile_process.rs
tools/compile_schedule/: Cargo.toml  compile_schedule.rs
tools/compile_scheduler/: Cargo.toml  compile_scheduler.rs
tools/compile_state_library/: Cargo.toml  compile_state_library.rs
tools/compile_state_struct/: Cargo.toml  compile_state_struct.rs
tools/compile_tools/: Cargo.toml  compile_tools.rs
tools/generate_schedule_tags/: Cargo.toml  generate_schedule_tags.rs
tools/generate_state_library/: Cargo.toml  generate_cargo_toml.rs  generate_source.rs  generate_state_library.rs
tools/os_setup/gnu/: setup.sh
tools/run_kernel/: Cargo.toml  run_kernel.rs
tools/scripts/: compile_settings.rs  notes.txt  tool_helpers.rs  tool_settings.rs
tools/scripts/compile_common/: compile_common.rs
tools/scripts/compile_kernel/: compile_kernel.rs
tools/scripts/compile_process/: compile_process.rs
tools/scripts/compile_schedule/: compile_schedule.rs
tools/scripts/compile_scheduler/: compile_scheduler.rs
tools/scripts/compile_tools/: compile_tools.rs
tools/scripts/new_state_struct/: new_state_struct  new_state_struct.rs
tools/scripts/run_kernel/: run_kernel.rs
utensils/dependencies/: Cargo.toml
utensils/dependencies/libraries/system/: Cargo.toml
utensils/dependencies/libraries/system/src/: system.rs
utensils/dependencies/libraries/utensils_common/: Cargo.toml
utensils/dependencies/libraries/utensils_common/src/: utensils_common.rs
utensils/src/add_process/: add_process.rs
utensils/src/add_project/: add_project.rs
utensils/src/add_project/defaultproject/dependencies/: Cargo.toml
utensils/src/add_state/: add_state.rs
utensils/src/compiler/: .#compiler.rs  compile_dependencies.rs  compile_kernel.rs  compile_process.rs  compile_schedule.rs  compile_scheduler.rs  compile_state.rs  compiler.config  compiler.rs  (+3 more)
utils/: Cargo.toml  README.md
utils/binaries/: README.md
utils/definitions/: README.md
utils/src/: compile.sh  utils.rs
(+57 files in other folders)
