[package]

name = "dataset"
version = "0.0.1"
authors = ["Kingsley Tolmie <kingsley.tolmie@gmail.com>"]

[lib]
name = "dataset"
path = "src/db.rs"

[dependencies.worldsong-utils]
path = "../utils"

[dependencies.sdl2]
git = "https://github.com/AngryLawyer/rust-sdl2"

[dependencies.gfx]
git = "http://github.com/gfx-rs/gfx-rs"