[package]

name = "compile_utensils"
version = "0.0.1"
authors = ["Kingsley Tolmie <kingsley.tolmie@gmail.com>"]

[[bin]]
name = "compile_utensils"
path = "src/compile_utensils.rs"

[dependencies.worldsong_hierarchy]
path = "./../../shared/worldsong_hierarchy"

[dependencies.utensils_common]
path = "./../../utensils/dependencies/libraries/utensils_common"

[dependencies]
getopts = "*"
