[package]
name = "graphics"
version = "0.0.1"
authors = [ "the ghost in the machine" ]

[lib]
name = "graphics"
path = "graphics_state.rs"
crate_type = ["dylib"]
plugin = true

# Required by all worldsong submodules
[dependencies.worldsong-common]
path = "/home/kingsley/Projects/rust/Worldsong/common"

[dependencies.sdl2]
