[package]

name = "generate_state_library"
version = "0.0.1"
authors = ["Kingsley Tolmie <kingsley.tolmie@gmail.com>"]

[[bin]]
name = "generate_state_library"
path = "generate_state_library.rs"

[dependencies.rustc-serialize]
version = "0.2"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"

[dependencies.worldsong-environment]
path = "./../../environment"
