[package]
name = "utensils_dependencies"
version = "0.1.0"
authors = ["Kingsquee <Kingsquee@users.noreply.github.com>"]

[lib]
name = "utensils_dependencies"

[dependencies.worldsong_hierarchy]
path = "./../../shared/worldsong_hierarchy"

[dependencies.dll]
path = "./../../shared/dll"

[dependencies.system]
path = "./libraries/system"

[dependencies.wraped]
git = "https://github.com/Kingsquee/wraped.git"

[dependencies]
getopts = "*"
regex = "*"
toml = "*"
walker = "*"