# Demo Cargo.toml

[package]
name = "dependencies"
version = "0.1.0"
authors = ["Worldsong"]

[lib]
name = "dependencies"
plugin = true

[dependencies.worldsong_hierarchy]
path = "./../../../shared/worldsong_hierarchy"

[dependencies.schedule_macro]
path = "./../../../shared/schedule_macro"

[dependencies.data_macro]
git = "https://github.com/Kingsquee/data-macro-rs.git"

[dependencies]
time = "0.1.25"